--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "server for managing the game",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "15.x"
   },
   "author": "",
   "license": "ISC",
